# kt-stb-devdocs-agent

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_ktds618-mvp-api.yml  main_ktds618-mvp-ui.yml  main_ktds618-mvp-ui2.yml
docs/: 01.STEP1.md  02.STEP2.md
setting_docs/: 01.STEP1.md  02.STEP2.md  KTDS MS AI 개발역량 향상과정 MVP과제 발표.pptx
setting_step/: 01.STEP1.md  02.STEP2.md
src/app/: config.py  main.py  rag_chain.py  retriever.py
src/app/prompts/: system_ko.md
src/ui/: gradio_app.py  streamlit_app.py
